# pipelines

./: Dockerfile  norm.csv  original.csv  pipeline.py  pyproject.toml  requirements.txt  see_csv.ipynb  task.db
pipelines/: cli.py  tasks.py
