[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = ""
authors = ["Val-Kon-211 <95030676+Val-Kon-211@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.0"
click = "^8.1.3"
pipeline = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pipelines = "pipelines:cli.cli"
